<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="knaph.uw.tacoma.edu.testinglab.authenticate.RegisterFragment"
    android:orientation="vertical">

    <EditText
        android:id="@+id/userid_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="Enter your userid"/>
    <EditText
        android:id="@+id/userpw_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="Enter your userid"/>
    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:layout_gravity="end"/>
</LinearLayout>
